Fix push notifications in app
